# Python-Learning

./: test.py
Concurency/: base.md  main.py
Concurency/multithreading/: library.py  multithreading.py
Core Python/: Chapter #1 Python data model.ipynb  README.md  pyproject.toml
Core Python/Chapter 1. Python data model/: Chapter #1 Python data model.ipynb
Core Python/Chapter 2. Sequences/: Chapter #2 Sequences.ipynb  Chapter #2.1. Lists.ipynb  Chapter #2.2. Tuples.ipynb  Chapter 2.1. Lists.ipynb
Standart Library/: time_lib.py
